kubernetes/go-data/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-data
  labels:
    app: go-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-data
  template:
    metadata:
      labels:
        app: go-data
    spec:
      containers:
      - name: go-data
        image: 337909769295.dkr.ecr.us-east-1.amazonaws.com/atp/go-data:latest
