kubernetes/go-data/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-data-service
spec:
  selector:
    app: go-data
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  type: ClusterIP
