kubernetes/go-data/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: go-data-allow-celery
spec:
  podSelector:
    matchLabels:
      app: go-data
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: celery-worker
    ports:
    - port: 8081
      protocol: TCP
  policyTypes:
  - Ingress
